# freedomfromsns

./: .gitignore  README.md  config.toml  install-ffs.bat  install-ffs.ps1  install-ffs.sh  pyproject.toml  uninstall-ffs.bat  uninstall-ffs.ps1  uninstall-ffs.sh
docs/: deployment-and-publishing.md  facebook-export-research.md  local-models.md  principles.md
fbbackup/: __init__.py  cli.py  embed.py  export_static.py  ffs_agent.py  ffs_api.py  ffs_server.py  localchat.py  materialize.py  media_extra.py  mojibake.py  parse.py  providers.py  server.py  setup.py  spaces_backend.py  spaces_writer.py  tray.py  tunnel.py
fbbackup/viewer/: fb-app.css  fb-app.js
fbbackup/viewer/themes/: 00-sapphire-mist.json  03-gold-noir.json  11-vibrant-greens.json  12-warm-neutrals.json  14-bold-orange.json  15-cool-blues.json  18-power-purple.json  19-morning-sky.json  21-cocoa-lime.json  23-cerulean.json  25-jade-mist.json  31-deep-ocean.json  32-pop-art.json  33-dusty-dune.json  35-greyscale.json  README.md
tests/: test_embed_resume.py  test_sharing.py
viewer/: fb-app.css  fb-app.js  index.html
viewer/logo-candidates/: README.md
viewer/themes/: 00-default.json  01-emerald.json  01-gallery.json  01-google.json  01-primary-pop.json  02-amazon.json  02-amber-linen.json  02-azure.json  02-minimal.json  03-crimson.json  03-facebook.json  04-youtube.json  05-yahoo.json  06-mocha-mousse.json  06-scarlet-paper.json  07-electric-violet.json  07-neon.json  08-earth.json  09-vibrant-greens.json  10-earth.json  10-warm-neutrals.json  11-maroon.json  12-bold-orange.json  13-cool-blues.json  13-maroon.json  14-minimal.json  15-pastels.json  16-pastels.json  16-vibrant-blues.json  17-power-purple.json  17-vibrant-blues.json  19-burgundy-rose.json  22-barn-sage.json  24-evergreen.json  25-toffee.json  27-coral-reef.json  28-dusty-indigo.json  29-tropical-punch.json  30-harvest.json  34-espresso.json  (+1 more)
