[project]
name = "freedomfromsns"
version = "0.1.2"
description = "FreedomFromSNS — browse, search, and chat with your Facebook archive, locally. Gemini-powered."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyyaml>=6.0",
    "numpy>=1.24",  # embed() normalizes/saves vectors unconditionally
]

[project.optional-dependencies]
# Video poster-frame thumbnails without a system ffmpeg install. Bundles a
# static ffmpeg per-OS (~60 MB); spaces_backend prefers a system ffmpeg and
# falls back to this. Frictionless video thumbs on native Windows/macOS.
media = ["imageio-ffmpeg>=0.5"]
# Local, no-key embeddings on CPU (fastembed/ONNX). Remote providers
# (gemini / apicascade) need neither — they're pure HTTP.
local = ["fastembed>=0.3"]
# GPU acceleration for the local model. ~277 MB — opt in only with a CUDA GPU
# (FBBACKUP_EMBED_DEVICE=gpu); the setup wizard sets it when it detects one.
gpu = ["fastembed>=0.3", "onnxruntime-gpu>=1.17"]

[project.scripts]
ffs = "fbbackup.cli:main"
fbbackup = "fbbackup.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fbbackup"]
include-package-data = true

[tool.setuptools.package-data]
# Ship the single-page viewer (html/js/css + fonts, themes, logos) inside the
# wheel so `uv tool install` / `pip install` is fully self-contained — the server
# resolves these package-relative, not from the source tree.
fbbackup = ["viewer/**/*"]
