[project]
name = "freedomfromsns"
version = "0.1.27"
description = "FreedomFromSNS — browse, search, and chat with your Facebook archive, locally. Gemini-powered."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",   # tomllib is stdlib only on 3.11+
    "numpy>=1.24",          # embed() normalizes/saves vectors unconditionally
    "imageio-ffmpeg>=0.5",  # bundled static ffmpeg → video poster-frame thumbnails work
                            # everywhere (no system ffmpeg); spaces_backend prefers a
                            # system ffmpeg and falls back to this.
    "pillow>=10",           # image thumbnail resizing (lighter/faster grid) + tray icon
    "fastembed>=0.3",       # local, no-key embeddings (CPU/ONNX). Now CORE because local
                            # search is the default — so an isolated `uv tool` env always
                            # has it and upgrades never drop it. Remote providers ignore it.
]

[project.optional-dependencies]
# Kept for compatibility; fastembed is now in core (above).
local = ["fastembed>=0.3"]
# GPU acceleration for the local model. ~277 MB — opt in only with a CUDA GPU
# (FBBACKUP_EMBED_DEVICE=gpu); the setup wizard sets it when it detects one.
gpu = ["fastembed>=0.3", "onnxruntime-gpu>=1.17"]

[project.scripts]
ffs = "fbbackup.cli:main"
fbbackup = "fbbackup.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fbbackup"]
include-package-data = true

[tool.setuptools.package-data]
# Ship the single-page viewer (html/js/css + fonts, themes, logos) inside the
# wheel so `uv tool install` / `pip install` is fully self-contained — the server
# resolves these package-relative, not from the source tree.
fbbackup = ["viewer/**/*"]
